--- a/index.html
+++ b/index.html
@@ -3,63 +3,71 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ShopStream - Real-Time E-Commerce Analytics</title>
+  <title>ShopStream: Real-Time Data Pipeline</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      line-height: 1.6;
-      padding: 2rem;
-      background-color: #f9f9f9;
-      color: #333;
+      background: #f2f4f8;
+      margin: 0;
+      padding: 0;
     }
-    h1, h2 {
-      color: #0053ba;
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 20px;
+      text-align: center;
     }
-    .container {
-      max-width: 900px;
-      margin: auto;
+    section {
+      padding: 20px;
+      margin: 20px;
       background: white;
-      padding: 2rem;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
-    code {
-      background-color: #eee;
-      padding: 2px 4px;
-      border-radius: 4px;
+    h2 {
+      color: #2c3e50;
+    }
+    footer {
+      text-align: center;
+      padding: 10px;
+      background: #2c3e50;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+  <header>
     <h1>ShopStream</h1>
-    <h2>Real-Time Data Pipeline for E-Commerce Analytics</h2>
-    <p><strong>GitHub Repo:</strong> <a href="https://github.com/priyal111/ShopStream" target="_blank">ShopStream on GitHub</a></p>
+    <p>Real-Time Data Pipeline for E-Commerce Analytics</p>
+  </header>
 
-    <h2>📌 Project Overview</h2>
-    <p><strong>ShopStream</strong> is a real-time data pipeline project designed for e-commerce analytics using a minimal tech stack. It simulates data ingestion, transformation, storage, and visualization end-to-end.</p>
+  <section>
+    <h2>🔷 Project Overview</h2>
+    <p>ShopStream is a data engineering solution designed to collect, process, store, and visualize e-commerce data in real-time using modern technologies like Python, PySpark, cloud storage, and BI tools.</p>
+  </section>
 
-    <h2>⚙️ Tech Stack</h2>
+  <section>
+    <h2>📂 Modules Included</h2>
     <ul>
-      <li><strong>Ingestion:</strong> Python (Simulated Stream), Kafka (optional)</li>
-      <li><strong>Processing:</strong> PySpark / Pandas</li>
-      <li><strong>Storage:</strong> Azure Blob / AWS S3 / CSV</li>
-      <li><strong>Data Warehouse:</strong> SQLite / Synapse / Redshift</li>
-      <li><strong>Visualization:</strong> Power BI / Matplotlib</li>
-      <li><strong>Orchestration:</strong> Python (or Airflow)</li>
+      <li>1. Data Ingestion (Kafka / Python)</li>
+      <li>2. Data Processing (PySpark / Pandas)</li>
+      <li>3. Storage (Azure Blob / S3 / CSV)</li>
+      <li>4. Data Transformation (SQL / PySpark)</li>
+      <li>5. Data Warehouse (Synapse / Redshift)</li>
+      <li>6. Data Visualization (Power BI / Data Studio)</li>
+      <li>7. Orchestration (Airflow / Python Scheduler)</li>
     </ul>
+  </section>
 
-    <h2>📁 Folder Structure</h2>
-    <pre>
-shopstream/
-├── data/
-├── ingestion/
-├── processing/
-├── storage/
-├── warehouse/
-├── visualization/
-├── orchestrator/
-    </pre>
+  <section>
+    <h2>📘 GitHub Repository</h2>
+    <p><a href="https://github.com/priyal111/ShopStream" target="_blank">View Full Source Code on GitHub</a></p>
+  </section>
 
-    <h2>📊 Output</h2>
-    <p>Visual dashboards and graphs showing e-commerce metrics such as customer trends, order volumes, and product a
+  <footer>
+    <p>© 2025 ShopStream Project by Priyal Gupta</p>
+  </footer>
+
+</body>
+</html>
